--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div id="wrap">
             <div id="text" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;">
                 <div id="code">
-                    <font color="#000"><span class="say">Chúc mừng 8/3 đến đến chị của em!!</span><br>
+                    <font color="#000"><span class="say">Chúc mừng 8/3 đến chị của em!!</span><br>
                         <span class="say"> </span><br>
                         <span class="say">Nhân ngày 8/3 e chúc chị 1 ngày thật hạnh phúc và luôn may mắn trong cuộc mãi mãi xinh đẹp như ngày chị lên xe hoa nhóa.</span><br>
                         <span class="say"> </span><br>
-                        <span class="say">Mau sinh em bé để e được lên chức cậu nhé:)</span> </span><br>
+                        <span class="say">Mau sinh em bé để em được lên chức cậu nhé:)</span> </span><br>
                         <span class="say"><span class="space"><img width="100px" height="100px" src="image/tym.png" alt=""><br>
                         <span class="say"><span class="space"></span> --my sister-- </span>
                     </font>
